--- a/main.html
+++ b/main.html
@@ -20,10 +20,8 @@
     <main>
       <h2>3 random images</h2>
       <img src="https://picsum.photos/id/123/200/300" alt="image" />
-      <img src="https://picsum.photos/id/124/200/300" alt="image" /><img
-        src="https://picsum.photos/id/125/200/300"
-        alt="image"
-      />
+      <img src="https://picsum.photos/id/124/200/300" alt="image" />
+	  <img src="https://picsum.photos/id/125/200/300"alt="image"/>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
